# ClawBio

./: CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  clawbio-manual.md  clawbio.py  hatch_build.py  index.html  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
bot/: roboterri.py  roboterri_discord.py  security.py
bot/tests/: test_security.py
clawbio/: __init__.py  cli.py  runner.py  skill_intents.py
clawbio/gi/: gi_runner.py
clawbio/tests/: test_package_api.py  test_packaging.py  test_runner.py
docs/: architecture.md  reproducibility.md  skill-action-contract.md  skill-intents.md
packaging/: README.md
packaging/bioconda/: meta.yaml
scripts/: generate_catalog.py
skills/: catalog.json
skills/bio-orchestrator/tests/: test_skill_intents.py
skills/claw-methylation-cycle/: SKILL.md
skills/gi-enhancer/: SKILL.md
skills/gi-promoter/: SKILL.md
skills/gi-splice/: SKILL.md
skills/omics-target-evidence-mapper/: omics_target_evidence_mapper.py
skills/sample-qc-forensics/: SKILL.md  sample_qc_forensics.py
skills/sample-qc-forensics/tests/: test_sample_qc_forensics.py
skills/ukb-ppp-region-fetch/: SKILL.md
tests/: test_clawbio_runner_actions.py
