[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawbio"
description = "The first bioinformatics-native AI agent skill library. Local-first, reproducible, built on OpenClaw."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dynamic = ["version"]
authors = [
    { name = "Manuel Corpas", email = "mc.admin@manuelcorpas.com" },
]
keywords = [
    "bioinformatics",
    "genomics",
    "ai-agents",
    "openclaw",
    "gwas",
    "pharmacogenomics",
    "polygenic-risk-score",
    "reproducibility",
    "population-genetics",
    "variant-annotation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "biopython>=1.82",
    "conda-lock>=2.0",
    "google-auth>=2,<3",
    "google-cloud-bigquery>=3,<4",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "openai>=1.0",
    "opentelemetry-sdk>=1.20,<2",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "pydeseq2>=0.4",
    "rocrate>=0.15.0",
    "scikit-learn>=1.3",
]

[project.scripts]
clawbio = "clawbio.cli:main"

[project.urls]
Homepage = "https://clawbio.ai"
Documentation = "https://clawbio.github.io/ClawBio/"
Repository = "https://github.com/ClawBio/ClawBio"
Issues = "https://github.com/ClawBio/ClawBio/issues"

[dependency-groups]
bot = [
    "python-telegram-bot[job-queue]>=21.0",
    "discord.py>=2.3.0",
    "flask>=3.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0",
]

[tool.hatch.version]
path = "clawbio/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["clawbio"]
# The package's own test suite is not needed at runtime.
exclude = ["clawbio/tests", "clawbio/tests/**"]

# Bundle a curated subset of skills/ and examples/ into the wheel under the
# clawbio/ namespace (see hatch_build.py). Files stay at the repository root on
# disk so the Claude Code plugin marketplace and public skills/ URLs are intact.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
# Ship the full source the wheel build needs (the build hook reads skills/ and
# examples/ from the unpacked sdist when conda or pip builds the wheel).
include = [
    "clawbio",
    "skills",
    "examples",
    "clawbio.py",
    "hatch_build.py",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CITATION.cff",
]
